--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -13,7 +13,8 @@
             <!-- sobre o blog -->
             <section class="my-5">
                 <h2 class="h1-responsive font-weight-bold text-center my-5">Sobre o Blog</h2>
-                <p class="dark-grey-text">Esse blog foi criado por acadêmicos de Ciência da Computação da Universidade Estadual do Ceará e tem como objetivo divulgar para fora do meio universitário o que é a Ciência da Computação e qual a importância dela.</p>
+                <p class="dark-grey-text lead">O {{ g.brand }} foi criado com o objetivo de divulgar a Ciência da Computação, produzindo conteúdos de diversas áreas relacionadas à tecnologia. Aqui você irá encontrar tutoriais, discussões, textos opinativos, divulgação científica, dicas e muito mais!</p>
+                <p class="dark-grey-text lead">Seja você um programador inexperiente, alguém que pensa em cursar Ciência da Computação ou alguém com anos de carreira, esse blog é feito para você! Tire suas dúvidas, descubra novas tecnologias, linhas de pesquisa e tudo sobre o fascinante mundo da Ciência da Computação.</p>
             </section>
             <!-- sobre os autores -->
             <section class="team-section my-5">
