--- a/templates/error/404.html
+++ b/templates/error/404.html
@@ -1,135 +1,23 @@
 {% include "includes/head.html" %}
 
-    <title>The Science's on the Table - Página Não Encontrada</title>
+    <title>{{ g.brand }} - Página Não Encontrada</title>
 </head>
 
 <body>
-    <section class="error_section">
-      <p class="error_section_subtitle">Ops! Essa página não existe</p>
-      <h1 class="error_title">
-        <p>404</p>
-        404
-      </h1>
-      <a href="/" class="btn">Página Inicial</a>
-    </section>
-    <!-- JS do jQuery + Popper.js + Bootstrap (CDN) -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</body>
+{% include "includes/menu.html" %}
 
-<style>
-    * {
-  margin: 0;
-  padding: 0;
-}
+{% include "includes/chamada.html" %}
 
-a {
-  text-decoration: none;
-}
+    <div class="jumbotron-fluid">
+        <div class="container">
+            <!-- sobre o blog -->
+            <section class="my-5">
+                <h1 class="h1-responsive font-weight-bold text-center my-5">Página Não Encontrada</h1>
+                <h3 class="dark-grey-text">Que Pena! </h3>
+                <h3 class="dark-grey-text">Parece que a página que você procura não existe. :(</h3>
+                <a href='/' class="btn btn-success" style="margin-bottom: 50px;">Página Inicial</a>
+            </section>
+        </div>
+    </div>
 
-body {
-  font-weight: 600;
-  color: #343434;
-}
-
-.error_section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  height: 100vh;
-  background-image: linear-gradient(-225deg, #1A1A1A, #343434);
-}
-.error_section_subtitle {
-  color: #25F193;
-  text-transform: uppercase;
-  letter-spacing: 5pt;
-  font-weight: 500;
-  font-size: 0.8rem;
-  margin-bottom: -5em;
-}
-.error_section .error_title {
-  --x-shadow: 0;
-  --y-shadow: 0;
-  --x:50%;
-  --y:50%;
-  font-size: 15rem;
-  transition: all 0.2s ease;
-  position: relative;
-  padding: 2rem;
-}
-.error_section .error_title:hover {
-  transition: all 0.2s ease;
-  text-shadow: var(--x-shadow) var(--y-shadow) 10px #1A1A1A;
-}
-.error_section .error_title p {
-  position: absolute;
-  top: 2rem;
-  left: 2rem;
-  background-image: radial-gradient(circle closest-side, rgba(255, 255, 255, 0.05), transparent);
-  background-position: var(--x) var(--y);
-  background-repeat: no-repeat;
-  text-shadow: none;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  transition: all 0.1s ease;
-}
-
-.btn {
-  padding: 0.8em 1.5em;
-  border-radius: 99999px;
-  background-image: linear-gradient(to top, #133d06, #2d7218);
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.2), inset 0px -2px 5px 0px rgba(0, 0, 0, 0.2);
-  border: none;
-  cursor: pointer;
-  text-shadow: 0px 1px #051201;
-  color: white;
-  text-transform: uppercase;
-  letter-spacing: 1.5pt;
-  font-size: 0.8rem;
-  font-weight: 700;
-  transition: ease-out 0.2s all;
-}
-.btn:hover {
-  text-shadow: 0px 1px 1px #a0b19b;
-  color:white;
-  transform: translateY(-5px);
-  box-shadow: 0px 4px 15px 2px rgba(0, 0, 0, 0.1), inset 0px -3px 7px 0px rgba(0, 0, 0, 0.2);
-  transition: ease-out 0.2s all;
-}
-</style>
-
-<script type="text/javascript">
-    
- 
-const title = document.querySelector('.error_title')
-
-
-//////// Light //////////
-document.onmousemove = function(e) {
-  let x = e.pageX - window.innerWidth/2;
-  let y = e.pageY - window.innerHeight/2;
-  
-  title.style.setProperty('--x', x + 'px')
-  title.style.setProperty('--y', y + 'px')
-}
-
-////////////// Shadow ///////////////////
-title.onmousemove = function(e) {
-  let x = e.pageX - window.innerWidth/2;
-  let y = e.pageY - window.innerHeight/2;
-
-  let rad = Math.atan2(y, x).toFixed(2); 
-  let length = Math.round(Math.sqrt((Math.pow(x,2))+(Math.pow(y,2)))/10); 
-
-  let x_shadow = Math.round(length * Math.cos(rad));
-  let y_shadow = Math.round(length * Math.sin(rad));
-
-  title.style.setProperty('--x-shadow', - x_shadow + 'px')
-  title.style.setProperty('--y-shadow', - y_shadow + 'px')
-
-}
-</script>
-
-</html>
+{% include "includes/rodape.html" %}
