--- a/templates/includes/mostrar-usuarios.html
+++ b/templates/includes/mostrar-usuarios.html
@@ -22,7 +22,7 @@
                     <!-- div do texto -->
                     <div class="col-lg-7 col-xl-8">
                         <h3 class="font-weight-bold mb-3">{{ autor.nome_completo }}</h3>
-                        <p class="dark-grey-text">{{ autor.descricao }}</p>
+                        <p class="dark-grey-text lead">{{ autor.descricao }}</p>
                         <a class="fa-lg fb-ic" href="{{ autor.facebook }}" target="_blank" style="color: #133d06;">
                             <i class="fab fa-facebook"></i>
                         </a>
