--- a/templates/includes/menu.html
+++ b/templates/includes/menu.html
@@ -35,6 +35,10 @@
                 </li>
 
                 <li class="nav-item">
+                    <a class="nav-link" href="/admin/ads/">Listar Anúncios</a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link" href="/admin/usuarios/">Usuários</a>
                 </li>
 
