att uns negocio

--- a/templates/includes/menu.html
+++ b/templates/includes/menu.html
@@ -34,8 +34,14 @@
                     <a class="nav-link" href="/admin/novo-post/">Novo Post</a>
                 </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="/admin/ads/">Listar Anúncios</a>
+                <li class="nav-item dropdown dmenu">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                        Anúncios
+                    </a>
+                    <div class="dropdown-menu sm-menu">
+                        <a class="dropdown-item" href="/admin/ads/">Listar Anúncios</a>
+                        <a class="dropdown-item" href="/admin/novo-ad/">Novo Anúncio</a>
+                    </div>
                 </li>
 
                 <li class="nav-item">
