--- a/templates/admin/novo-post.html
+++ b/templates/admin/novo-post.html
@@ -85,4 +85,4 @@
         height: 150
     });
 </script>
-<script src="{{url_for('.static', filename='js/s3upload.cjs')}}"></script>
+<script src="{{url_for('.static', filename='js/s3upload.js')}}"></script>
