--- a/templates/admin/novo-post.html
+++ b/templates/admin/novo-post.html
@@ -85,6 +85,7 @@
         height: 150
     });
 </script>
+<!--
 <script>
 (function() {
     document.getElementById("img").onchange = function(){
@@ -138,4 +139,4 @@ function uploadFile(file, s3Data, url){
     };
     xhr.send(postData);
 }
-</script>
+</script> -->
