--- a/templates/ver-post.html
+++ b/templates/ver-post.html
@@ -111,7 +111,7 @@
                     {% endif %}
 
                     <div class="well">
-                        <h4><i class="fa fa-tags"></i> Posts mais populares </h4>
+                        <h4><i class="fa fa-fire"></i> Posts mais populares </h4>
                         <ul class="list-unstyled">
                             {% for post in populares %}
                             {% set url = "/posts/ver-post/{}".format(post.url) %}
